    that of altering a small subset of objects, to
    leave in place the data from the larger enclosing
    set of objects that weren't modified in
    that sub-transaction.  [ticket:2452]

  - [feature] Added utility feature
    Session.enable_relationship_loading(),
    supersedes relationship.load_on_pending.
    Both features should be avoided, however.
    [ticket:2372]

  - [bug] The "passive" flag on Session.is_modified()
    no longer has any effect. is_modified() in
    all cases looks only at local in-memory
    modified flags and will not emit any
    SQL or invoke loader callables/initializers.
    [ticket:2320]

  - [bug] The warning emitted when using
    delete-orphan cascade with one-to-many
    or many-to-many without single-parent=True
    is now an error.  The ORM
    would fail to function subsequent to this
    warning in any case.  [ticket:2405]

  - [feature] Query now "auto correlates" by
    default in the same way as select() does.
    Previously, a Query used as a subquery
    in another would require the correlate()
    method be called explicitly in order to
    correlate a table on the inside to the
    outside.  As always, correlate(None)
    disables correlation.  [ticket:2179]

  - [feature] The after_attach event is now
    emitted after the object is established
    in Session.new or Session.identity_map
    upon Session.add(), Session.merge(),
    etc., so that the object is represented
    in these collections when the event
    is called.  Added before_attach
    event to accommodate use cases that
    need autoflush w pre-attached object.
    [ticket:2464]

  - [feature] ORM entities can be passed
    to select() as well as the select_from(),
    correlate(), and correlate_except()
    methods, where they will be unwrapped
    into selectables. [ticket:2245]

  - [feature] The registry of classes
    in declarative_base() is now a
    WeakValueDictionary.  So subclasses of
    "Base" that are dereferenced will be